@@ -71,7 +71,8 @@ TESTS = \
 	viewInstantiationAwkwardCaseApril2025 \
 	viewInstantiationByModuleViewApril2025 \
 	viewInstantiationByTheoryViewApril2025 \
-	stratToExprNotValidMay2025
+	stratToExprNotValidMay2025 \
+	invalidStrategyDefinitionJune2025
 
 MAUDE_FILES = \
 	CUIbug12-22-09.maude \
@@ -146,7 +147,8 @@ MAUDE_FILES = \
 	viewInstantiationAwkwardCaseApril2025.maude \
 	viewInstantiationByModuleViewApril2025.maude \
 	viewInstantiationByTheoryViewApril2025.maude \
-	stratToExprNotValidMay2025.maude
+	stratToExprNotValidMay2025.maude \
+	invalidStrategyDefinitionJune2025.maude
 
 RESULT_FILES = \
 	CUIbug12-22-09.expected \
@@ -221,6 +223,7 @@ RESULT_FILES = \
 	viewInstantiationAwkwardCaseApril2025.expected \
 	viewInstantiationByModuleViewApril2025.expected \
 	viewInstantiationByTheoryViewApril2025.expected \
-	stratToExprNotValidMay2025.expected
+	stratToExprNotValidMay2025.expected \
+	invalidStrategyDefinitionJune2025.expected
 
 EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
